; ModuleID = '/home/carl/AnghaBench/git/extr_sub-process.c_subprocess_exit_handler.c'
source_filename = "/home/carl/AnghaBench/git/extr_sub-process.c_subprocess_exit_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.child_process = type { i32, i32 }

@SIGPIPE = common dso_local global i32 0, align 4
@SIG_IGN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.child_process*)* @subprocess_exit_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @subprocess_exit_handler(%struct.child_process* %0) #0 {
  %2 = alloca %struct.child_process*, align 8
  store %struct.child_process* %0, %struct.child_process** %2, align 8
  %3 = load i32, i32* @SIGPIPE, align 4
  %4 = load i32, i32* @SIG_IGN, align 4
  %5 = call i32 @sigchain_push(i32 %3, i32 %4)
  %6 = load %struct.child_process*, %struct.child_process** %2, align 8
  %7 = getelementptr inbounds %struct.child_process, %struct.child_process* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @close(i32 %8)
  %10 = load %struct.child_process*, %struct.child_process** %2, align 8
  %11 = getelementptr inbounds %struct.child_process, %struct.child_process* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @close(i32 %12)
  %14 = load i32, i32* @SIGPIPE, align 4
  %15 = call i32 @sigchain_pop(i32 %14)
  %16 = load %struct.child_process*, %struct.child_process** %2, align 8
  %17 = call i32 @finish_command(%struct.child_process* %16)
  ret void
}

declare dso_local i32 @sigchain_push(i32, i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i32 @sigchain_pop(i32) #1

declare dso_local i32 @finish_command(%struct.child_process*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
